# junior-college-admission

./: .dockerignore  .env.example  .gitignore  2027_전문대_입시상담앱_실행개발문서_v2.md  AGENTS.md  CODEX_MASTER_PROMPT_2027_전문대_입시상담앱_v3.md  DEVELOPMENT_LOG.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  docker-compose.alpha.yml  docker-compose.beta.yml  docker-compose.demo.yml  docker-compose.google-oidc.yml  docker-compose.host-nginx.yml  docker-compose.production.yml  docker-compose.smtp.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
app/: __init__.py  account_routes.py  admin_routes.py  admission_result_import_routes.py  auth.py  auth_routes.py  database.py  member_routes.py  models.py  phase14_cli.py  routes.py  source_document_routes.py  teacher_routes.py
deploy/: logrotate.admission  nginx.demo-origin.conf  nginx.host-admission-cloudflare-realip.conf  nginx.host-admission-demo-proxy.conf  nginx.host-admission-http.conf  nginx.host-admission-proxy.conf  nginx.host-admission-site.conf  nginx.production.conf  postgres_demo_rollback_gate.sql  postgres_metrics_readonly.sql
docs/: ALPHA_ENVIRONMENT.md  BETA_ENVIRONMENT.md  BYOK_AI.md  DATABASE_OPERATIONS.md  DOMAIN_GLOSSARY.md  FRONTEND_ARCHITECTURE.md  INPUT_GATEWAY.md  PHASE_10_NONPROD_PREP.md  PHASE_10_OPERATIONS.md  PHASE_11_OPERATIONS.md  PHASE_14_ADMISSION_RESULT_IMPORT.md  PHASE_16_ACCOUNT_COLLABORATION.md  PHASE_5_PILOT_VERIFICATION.md  PHASE_6_ADMISSION_RESULTS.md  PHASE_6_SOURCE_INVENTORY.md  PHASE_7_RULE_CANDIDATES.md  PHASE_7_RULE_LIFECYCLE.md  PRIVACY_DATA_RETENTION.md  PRODUCTION_READINESS.md  REQUIREMENTS.md  RULE_SCHEMA.md  SCORE_RULE_CSV.md  SOURCE_POLICY.md  TEST_STRATEGY.md
(+290 files in other folders)
