[project]
name = "junior-college-admission"
version = "0.1.0"
description = "2027학년도 전문대 입시 상담 보조 시스템"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "flask>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1,<2",
    "sqlalchemy>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.uv]
default-groups = ["dev"]
