[project]
name = "junior-college-admission"
version = "0.1.0"
description = "2027학년도 전문대 입시 상담 보조 시스템"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "flask>=3.1,<4",
    "flask-migrate>=4,<5",
    "flask-sqlalchemy>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1,<2",
    "sqlalchemy>=2,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
    "types-flask-migrate>=4,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["app.routes", "test_app", "tests.test_app"]
disallow_untyped_defs = false

[tool.uv]
default-groups = ["dev"]
